--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -24,7 +24,9 @@
 
 <div class="blur-overlay" id="blur" onclick="removePopUp()"></div>
 
-<div class="splash-page-formatting container-fluid">
+<!-- Opening Page -->
+
+<div class="splash-page-formatting container-fluid universal-site-width">
 
     <div class="container-fluid" style="position: relative; max-width: 2400px;">
         <div class="text-position">
@@ -145,25 +147,24 @@
 
 <!-- Knowledge Section-->
 
-<section style="background-color: var(--blue);">
+<section class="universal-site-width" style="background-color: var(--blue); ">
 
     <div class="container section-width align-items-center text-lg-left" style="background-color: var(--blue);">
         <h3 class="section-headers" style="color: white">Knowledge</h3>
     </div>
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding-bottom: 50px; font-size: 24px;" >
-        <p class="text-color">
+    <div class="container section-width bottom-border d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding-bottom: 50px; font-size: 24px;" >
+        <p class="text-color knowledge-intro">
             Think of websites as human bodies – each section plays a specific role, just like different parts of the body. Seeing websites in this light makes it easier to navigate and 
             design each part successfully. It's like understanding the anatomy of a website!
         </p>
     </div>
 
+    <div class="container section-width d-flex justify-content-center align-items-center" style="padding: 0px 0px 100px 0px; width: 100%;">
 
-    <div class="container section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding-bottom: 100px;">
+        <div class="row justify-content-center ">
 
-         <div class="row justify-content-center">
-
-            <div class="col-md-4 col-sm-12 knowledge-box-container bottom-border">
+            <div class="col-md-4 col-sm-12 col-12-md-custom knowledge-box-container bottom-border">
                     
                         <div class="row justify-content-center align-items-center knowledge-block">
 
@@ -210,7 +211,7 @@
                         </div>
                     </div>
 
-            <div class="col-md-4 col-sm-12 knowledge-box-container middle-border bottom-border">
+            <div class="col-md-4 col-sm-12 col-12-md-custom knowledge-box-container middle-border bottom-border">
 
                 <div class="row justify-content-center align-items-center knowledge-block">
 
@@ -262,7 +263,7 @@
                             </div>
                         </div>
 
-            <div class="col-md-4 col-sm-12 knowledge-box-container">
+            <div class="col-md-4 col-sm-12 col-12-md-custom knowledge-box-container">
 
                 <div class="row justify-content-center align-items-center knowledge-block">
 
@@ -319,7 +320,7 @@
 
 <!-- Projects Section-->
 
-<div style="width: 100%; background-color: white;">
+<div class="universal-site-width" style="background-color: white;">
 
     <div class="container section-width align-items-center text-lg-left" style="background-color: white;">
         <h3 class="section-headers" style="color: var(--blue)">Projects</h3>
@@ -359,16 +360,16 @@
 
                                     <div class="row">
 
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
 
@@ -398,16 +399,16 @@
 
                                     <div class="row">
 
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
-                                        <div class="col-lg-1 col-md-1 col-2">
+                                        <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                             <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                 
@@ -461,16 +462,16 @@
 
                                 <div class="row">
 
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
                                 </div>
@@ -500,16 +501,16 @@
 
                                 <div class="row">
 
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/html5-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/css3-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
-                                    <div class="col-lg-1 col-md-1 col-2">
+                                    <div class="col-lg-1 col-md-1 col-2 col-2-md-custom">
                                         <img src="/Assets/images/SVGs/c-sharp-grey.svg" class="img-fluid" alt="Responsive Image" />
                                     </div>
                            
@@ -539,11 +540,9 @@
 
 </div>
 
-<!-- Test comment to see if its working-->
-
 <!-- About Me Section-->
 
-<div style="width: 100%; background-color: var(--blue);">
+<div class="universal-site-width" style="background-color: var(--blue);">
 
     <div class="container section-width align-items-center text-lg-left text-color" style="background-color: var(--blue)">
         <h3 class="section-headers">About Me</h3>
@@ -659,7 +658,7 @@
 
 <!-- Contact Section -->
 
-<div style="width: 100%; background-color: white;">
+<div class="universal-site-width" style="background-color: white;">
     
     <div class="container section-width align-items-center text-lg-left" style="background-color: white;">
         <h3 class="section-headers" style="color: var(--blue)">Contact</h3>
