--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -24,23 +24,73 @@
 
 <div class="blur-overlay" id="blur" onclick="removePopUp()"></div>
 
+
 <!-- Opening Page -->
 
 <div class="splash-page-formatting container-fluid universal-site-width">
+    <!-- overlay -->
 
-    <div class="container-fluid" style="position: relative; max-width: 2400px;">
-        <div class="text-position">
-            <h1 class="font-weight-bold name-title splash-titles" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
-            <h2 class="font-weight-bold profession-title splash-titles" style="animation: textSlideTitles 3s;">Front End Developer</h2>
+    <div class="container-fluid" style="position: relative; max-width: 1600px; max-height: 100%;">
+        <div class="row " style="position: absolute;">
 
-            <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Number of Projects</h2>
-            <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Kata on Codewars</h2>
+            <div class="col-md-9 col-lg-9 col-sm-12 col-12" style="padding-bottom: 70px;">
+                <h1 class="font-weight-bold name-title splash-titles" style="animation: textSlideTitles 1.8s;">Samuel Cole</h1>
+                <h2 class="font-weight-bold profession-title splash-titles" style="animation: textSlideTitles 3s;">Front End Developer</h2>
+            </div>
+
+            <div class="col-md-3 col-lg-3 col-sm-4 col-12 order-md-1 order-sm-2" style="padding-bottom: 90px;" >
+
+                <div class="row justify-content-end align-items-center">
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.2s;">
+                        <div class="skills-title splash-titles">My Skills:</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.5s; ">
+                        <div class="skill">Javascript</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.8s;">
+                        <div class="skill">C#</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.1s;">
+                        <div class="skill">HTML</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.4s;">
+                        <div class="skill">CSS</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.7s;">
+                        <div class="skill">.NET</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3s;">
+                        <div class="skill">NodeJS</div>
+                    </div>
+
+                    <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.3s;">
+                        <div class="skill">MongoDB</div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-md-12 col-lg-12 col-sm-8 col-12  order-md-2 order-sm-1">
+                <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Number of Projects</h2>
+                <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Kata on Codewars</h2>
+            </div>
+        
         </div>
     </div>
 
-    <div class="row h-100" style="z-index: 2;">
+    <!-- background Images -->
 
-        <div class="col-md-8 col-lg-8 col-sm-8 col-6" style="height: 100%;">
+    <div class="row h-100">
+
+        <div class="col-12" style="height: 100%;">
 
             <div class="row">
                 <div class="col-12 center-images-formatting">
@@ -88,59 +138,8 @@
                 </div>
             </div>
 
-        </div>
+        </div>   
 
-
-        <div class="col-md-4 col-lg-4 col-sm-4 col-6" style="height: 100%; margin-bottom: 20px; right: 0;">
-
-            <div class="row">
-
-                <div class="col-md-12 center-images-formatting order-sm-2" style="padding-top: 20px;">
-                    <img src="/Assets/images/SVGs/SC.svg" class="img-fluid left-side-custom-image mx-auto splash-image-opacity" alt="Responsive Image" style="animation: opacityOne 3s infinite alternate, opacity 3s infinite alternate; animation-delay: 2s;" />
-                </div>
-
-                <div class="col-md-12 order-sm-1" style="z-index: 2;">
-                    <div class="row">
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.2s;">
-                            <div class="skills-title splash-titles">My Skills:</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.5s; ">
-                            <div class="skill">Javascript</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 1.8s;">
-                            <div class="skill">C#</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.1s;">
-                            <div class="skill">HTML</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.4s;">
-                            <div class="skill">CSS</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 2.7s;">
-                            <div class="skill">.NET</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3s;">
-                            <div class="skill">NodeJS</div>
-                        </div>
-
-                        <div class="col-12 center-text-formatting" style="height: 100%; animation: textSlide 3.3s;">
-                            <div class="skill">MongoDB</div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-        
     </div>
 
 </div>
