--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -14,6 +14,8 @@ body {
     margin-bottom: 60px;
     width: 100%;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 /* base colors for the webpage */
@@ -175,24 +177,15 @@ body {
 
 /* Media Queries */
 
-@media(min-width: 2401px) {
-    .text-position {
-        top: 100px;
-        left: 40px;
-    }
-}
-
-@media(max-width: 2400px) {
-    .text-position {
-        top: 0px;
-        left: 40px;
-    }
-}
-
 @media(min-width: 1801px) {
 
     .name-title {
         font-size: 150px;
+    }
+
+    .skills-title,
+    .skill {
+        font-size: 42px
     }
 
     .profession-title {
@@ -211,6 +204,12 @@ body {
         font-size: 125px;
     }
 
+    .skills-title,
+    .skill {
+        font-size: 42px
+    }
+
+
     .profession-title {
         font-size: 105px;
     }
@@ -223,14 +222,10 @@ body {
 }
 
 @media(min-width: 1451px) {
+
     .left-side-custom-image {
         min-height: 300px;
         max-height: 350px;
-    }
-
-    .skills-title,
-    .skill {
-        font-size: 42px
     }
 
     .custom-image {
@@ -263,11 +258,6 @@ body {
         max-height: 350px;
     }
 
-    .skills-title,
-    .skill {
-        font-size: 30px
-    }
-
     .custom-image {
         max-height: 75px;
     }
@@ -289,31 +279,27 @@ body {
         margin-bottom: 20px;
     }
 
-    .name-title {
-        font-size: 100px;
-    }
-
-    .profession-title {
-        font-size: 80px;
-    }
 }
 
 @media(max-width: 1200px) {
 
     .name-title {
-        font-size: 85px;
+        font-size: 95px;
     }
 
     .profession-title {
-        font-size: 65px;
+        font-size: 75px;
     }
 
     .skills-title,
     .skill {
-        font-size: 25px
+        font-size: 35px
     }
 }
-@media(max-width: 1000px) {
+
+
+@media(max-width: 850px) {
+
     .name-title {
         font-size: 75px;
     }
@@ -324,13 +310,13 @@ body {
 
     .skills-title,
     .skill {
-        font-size: 20px
+        font-size: 25px
     }
 
-}
+    .splash-page-formatting {
+        height: 950px;
+    }
 
-
-@media(max-width: 800px) {
     .left-side-custom-image {
         min-height: 200px;
         max-height: 250px;
@@ -344,6 +330,8 @@ body {
         max-height: 75px;
     }
 
+
+
     .small-displays {
         max-height: 175px;
     }
@@ -361,22 +349,39 @@ body {
         margin-bottom: 20px;
     }
 
+}
+
+@media(max-width: 767px) {
+
     .name-title {
-        font-size: 65px;
+        font-size: 100px;
     }
 
     .profession-title {
-        font-size: 45px;
+        font-size: 65px;
     }
 
     .skills-title,
     .skill {
-        font-size: 15px
+        font-size: 30px
     }
-
 }
 
 @media(max-width: 650px) {
+
+    .name-title {
+        font-size: 95px;
+    }
+
+    .profession-title {
+        font-size: 55px;
+    }
+
+    .skills-title,
+    .skill {
+        font-size: 30px
+    }
+
     .left-side-custom-image {
         min-height: 100px;
         max-height: 150px;
@@ -386,10 +391,6 @@ body {
         margin: 5px;
     }
 
-    .skills-title,
-    .skill {
-        font-size: 20px
-    }
 
     .custom-image {
         max-height: 75px;
@@ -412,26 +413,15 @@ body {
         margin-bottom: 10px;
     }
 
-    .name-title {
-        font-size: 55px;
-    }
 
-    .profession-title {
-        font-size: 35px;
-    }
-
-    .skills-title,
-    .skill {
-        font-size: 15px
-    }
 }
 
 
 
-@media(max-width: 574px) {
+@media(max-width: 585px) {
 
     .name-title {
-        font-size: 65px;
+        font-size: 80px;
     }
 
     .profession-title {
@@ -440,14 +430,14 @@ body {
 
     .skills-title,
     .skill {
-        font-size: 20px
+        font-size: 25px
     }
 }
 
-@media(max-width: 480px) {
+@media(max-width: 500px) {
 
     .name-title {
-        font-size: 55px;
+        font-size: 65px;
     }
 
     .profession-title {
@@ -456,11 +446,25 @@ body {
 
     .skills-title,
     .skill {
-        font-size: 17px
+        font-size: 22px
     }
 }
 
-@media(max-width: 380px) {
+@media(max-width: 420px) {
+
+    .name-title {
+        font-size: 55px;
+    }
+
+    .profession-title {
+        font-size: 30px;
+    }
+
+    .skills-title,
+    .skill {
+        font-size: 23px
+    }
+
     .left-side-custom-image {
         min-height: 50px;
         max-height: 100px;
@@ -491,8 +495,12 @@ body {
         margin-bottom: 10px;
     }
 
+}
+
+@media(max-width: 350px) {
+
     .name-title {
-        font-size: 45px;
+        font-size: 50px;
     }
 
     .profession-title {
@@ -501,9 +509,8 @@ body {
 
     .skills-title,
     .skill {
-        font-size: 12px
+        font-size: 20px
     }
-}
 
 }
 
