--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -79,8 +79,10 @@
             </div>
 
             <div class="col-md-12 col-lg-12 col-sm-8 col-12  order-md-2 order-sm-1">
-                <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Number of Projects</h2>
-                <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;">X Kata on Codewars</h2>
+                <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;"><span id="numberOfProjects" style="color: green;">0</span> Number of Projects</h2>
+                <h2 class="font-weight-bold splash-titles" >
+                    <img src="https://www.codewars.com/users/Sam89001/badges/large" class="img-fluid splash-titles" alt="Responsive Image" style="animation: textSlideTitles 4s;" />
+                </h2>
             </div>
         
         </div>
@@ -203,6 +205,11 @@
                                         <div class="col-lg-2 col-md-2 col-sm-2 col-3">
                                             <img src="/Assets/images/SVGs/javascript-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
+
+                                        <div class="col-lg-2 col-md-2 col-sm-2 col-3">
+                                            <img src="/Assets/images/SVGs/bootstrap-grey.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
+
                                     </div>
 
                                 </div>      
@@ -430,7 +437,7 @@
                     </div>
                </div>
 
-            <div class="roject-block-formatting project-block-margins project-border">
+            <div class="project-block-formatting project-block-margins project-border">
                     <div class="row row-formatting">
 
                         <div class="section col-md-6 margin-remover">
