--- a/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
+++ b/PortfolioProjectMVC/Views/Shared/_Layout.cshtml
@@ -17,13 +17,14 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white navbar-styles">
             <div class="d-flex container navbar-formatting" style="justify-content: space-between; flex-wrap: nowrap;">
-                <div class="d-flex align-items-center">
-                    <div style="display: flex; align-items: center;">
-                        <img src="/Assets/images/SVGs/SC.svg" style="max-width: 50px; max-height: 50px; padding: 0px;">
-                        <a class="font-weight-bold" style="font-size: 1.5rem; color: var(--blue); white-space: nowrap;">Samuel Cole</a>
-                    </div>
+
+                <div class="d-flex" style="justify-content: flex-start; align-items: center;">
+
+                    <a href="https://github.com/Sam89001" target="_blank">
+                        <img src="/Assets/images/SVGs/linkedin-blue.svg" alt="GitHub" style="max-height: 50px; max-width: 50px; padding: 0px;">
+                    </a>
+
                 </div>
-                <div class="d-flex title-for-hiding" style="font-size: 1.5rem; color: var(--grey)">Front-End Developer</div>
 
                 <div class="d-flex" style="justify-content: flex-start; align-items: center;">
                     <a href="https://github.com/Sam89001" target="_blank">
@@ -51,7 +52,7 @@
 
     <footer class="border-top footer text-muted" style="background-color: var(--blue)">
         <div class="container">
-            &copy; 2023 - Samuel Cole's Portfolio - Icons by <a href="https://icons8.com/" target="_blank">Icons8</a> & <a href="https://www.svgrepo.com/" target="_blank">SVG Repo</a>
+            Icons by <a href="https://icons8.com/" target="_blank">Icons8</a> & <a href="https://www.svgrepo.com/" target="_blank">SVG Repo</a>
         </div>
     </footer>
 
