--- a/PortfolioProjectMVC/wwwroot/css/animations.css
+++ b/PortfolioProjectMVC/wwwroot/css/animations.css
@@ -1,4 +1,15 @@
 ﻿/* Splash Page*/
+
+@keyframes scrollSplash {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 @keyframes opacity {
     0% {
         opacity: 0.3;
@@ -86,6 +97,13 @@
         transform: translateX(0px)
     }
 }
+/* 
+
+.universal-site-width {
+    animation: scrollSplash linear;
+    animation-timeline: view();
+    animation-range: entry 50% cover 50%;
+}This needs to change */
 
 .project-image-size .rotate-top,
 .project-image-size .rotate-bottom,
