--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -78,11 +78,22 @@
 
             </div>
 
-            <div class="col-md-12 col-lg-12 col-sm-8 col-12  order-md-2 order-sm-1">
-                <h2 class="font-weight-bold splash-titles" style="animation: textSlideTitles 3s;"><span id="numberOfProjects" style="color: green;">0</span> Number of Projects</h2>
-                <h2 class="font-weight-bold splash-titles" >
-                    <img src="https://www.codewars.com/users/Sam89001/badges/large" class="img-fluid splash-titles" alt="Responsive Image" style="animation: textSlideTitles 4s;" />
-                </h2>
+            <div class="col-md-12 col-lg-12 col-sm-8 col-12 order-md-2 order-sm-1">
+
+                <div class="row center-12">
+
+                    <div class="col-12 center-12">
+                        <h2 class="font-weight-bold splash-titles projects-title text-center d-flex align-items-center" style="animation: textSlideTitles 3s; padding-bottom: 20px;"><span class="projects-title-number" id="numberOfProjects" style="color: green;">0</span>&nbsp; Projects</h2>
+                    </div>
+
+                    <div class="col-12 center-12">
+                        <h2 class="font-weight-bold splash-titles" >
+                            <img src="https://www.codewars.com/users/Sam89001/badges/large" class="img-fluid splash-titles" alt="Responsive Image" style="animation: textSlideTitles 4s;" />
+                        </h2>
+                    </div>
+
+                </div>
+
             </div>
         
         </div>
@@ -548,114 +559,117 @@
 
 <!-- About Me Section-->
 
-<div class="universal-site-width" style="background-color: var(--blue);">
+<div style="background-color: var(--blue);">
+    <div class="universal-site-width">
 
-    <div class="container section-width align-items-center text-lg-left text-color" style="background-color: var(--blue)">
-        <h3 class="section-headers">About Me</h3>
-    </div>
+        <div class="container section-width align-items-center text-lg-left text-color" style="background-color: var(--blue)">
+            <h3 class="section-headers">About Me</h3>
+        </div>
 
-    <div class="container-fluid section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding: 20px;">
+        <div class="container-fluid section-width d-flex justify-content-center align-items-center" style="background-color: var(--blue); padding: 20px;">
 
-        <div class="row" style="margin-bottom: 40px;">
+            <div class="row" style="margin-bottom: 40px;">
 
-            <div class="col-md-6 text-color" style="margin-bottom: 40px; font-size: 20px;">
-                <p>
-                    Greetings! I'm Sam, a full-stack web developer based in the UK. Drawing from my background in animation, I infuse creativity and deliver unique programming solutions in my work. 
-                    With a year of self-taught experience, I've crafted various websites, spanning from straightforward to fully functional SPAs incorporating multiple CRUD operations.
-                </p>
-            </div>
+                <div class="col-md-6 text-color" style="margin-bottom: 40px; font-size: 20px;">
+                    <p>
+                        Greetings! I'm Sam, a full-stack web developer based in the UK. Drawing from my background in animation, I infuse creativity and deliver unique programming solutions in my work. 
+                        With a year of self-taught experience, I've crafted various websites, spanning from straightforward to fully functional SPAs incorporating multiple CRUD operations.
+                    </p>
+                </div>
 
-            <div class="col-md-6" style="padding-right: 10px;">
+                <div class="col-md-6" style="padding-right: 10px;">
 
-                <div class="row button-section">
+                    <div class="row button-section">
 
-                    <div class="col-12 button-styles" >
-                        <a href="https://github.com/Sam89001" target="_blank">
-                            <div class="row">
+                        <div class="col-12 button-styles" >
+                            <a href="https://github.com/Sam89001" target="_blank">
+                                <div class="row">
 
-                                <div class="d-flex col-3" >
-                                    <div style="padding: 5px;">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    <div class="d-flex col-3" >
+                                        <div style="padding: 5px;">
+                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="d-flex col-6" style="padding: 10px">
-                                    <div class="container" style="max-width: 220px; margin-left: 15px;">
-                                        <p class="d-flex about-me-text">Code Samples on Github</p>
+                                    <div class="d-flex col-6" style="padding: 10px">
+                                        <div class="container" style="max-width: 220px; margin-left: 15px;">
+                                            <p class="d-flex about-me-text">Code Samples on Github</p>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="d-flex col-3" >
-                                    <div style="padding: 5px;">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    <div class="d-flex col-3" >
+                                        <div style="padding: 5px;">
+                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
                                     </div>
+
                                 </div>
+                            </a>
+                        </div>
 
-                            </div>
-                        </a>
-                    </div>
+                        <div class="col-12 button-styles">
+                            <a href="https://www.linkedin.com/in/samuel-cole-586582229/" target="_blank">
+                                <div class="row">
 
-                    <div class="col-12 button-styles">
-                        <a href="https://www.linkedin.com/in/samuel-cole-586582229/" target="_blank">
-                            <div class="row">
-
-                                <div class="d-flex col-3">
-                                    <div style="padding: 5px;">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    <div class="d-flex col-3">
+                                        <div style="padding: 5px;">
+                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="d-flex col-6" style="padding: 10px">
-                                    <div class="container" style="max-width: 220px; margin-left: 15px;">
-                                        <p class="d-flex about-me-text">Linked In Page</p>
+                                    <div class="d-flex col-6" style="padding: 10px">
+                                        <div class="container" style="max-width: 220px; margin-left: 15px;">
+                                            <p class="d-flex about-me-text">Linked In Page</p>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="d-flex col-3">
-                                    <div style="padding: 5px;">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    <div class="d-flex col-3">
+                                        <div style="padding: 5px;">
+                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
                                     </div>
+
                                 </div>
+                            </a>
+                        </div>
 
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-12 button-styles">
+                        <div class="col-12 button-styles">
                         
-                            <div class="row">
+                                <div class="row">
 
-                                <div class="d-flex col-3">
-                                    <div style="padding: 5px;">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    <div class="d-flex col-3">
+                                        <div style="padding: 5px;">
+                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="d-flex col-6" style="padding: 10px">
-                                    <div class="container" style="max-width: 220px; margin-left: 15px;">
-                                        <p class="d-flex about-me-text">Download CV</p>
+                                    <div class="d-flex col-6" style="padding: 10px">
+                                        <div class="container" style="max-width: 220px; margin-left: 15px;">
+                                            <p class="d-flex about-me-text">Download CV</p>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="d-flex col-3" >
-                                    <div style="padding: 5px;">
-                                        <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                    <div class="d-flex col-3" >
+                                        <div style="padding: 5px;">
+                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        </div>
                                     </div>
-                                </div>
 
                             
-                            </div>
-                    </div>
+                                </div>
+                        </div>
 
-                    <div class="col-12 button-styles">
+                        <div class="col-12 button-styles">
 
-                        <!-- code wars score here using codewars API-->
+                            <!-- code wars score here using codewars API-->
+                        </div>
+
                     </div>
 
                 </div>
 
-            </div>
 
+            </div>
 
         </div>
 
