--- a/PortfolioProjectMVC/Views/Home/Index.cshtml
+++ b/PortfolioProjectMVC/Views/Home/Index.cshtml
@@ -581,13 +581,19 @@
 
                     <div class="row button-section">
 
+                        <div class="col-12 align-items-center d-flex justify-content-center" style="padding-bottom: 20px;">
+
+                            <img src="https://www.codewars.com/users/Sam89001/badges/large" class="img-fluid splash-titles" alt="Responsive Image" style="height: 100%; width: 100%;" />
+
+                        </div>
+
                         <div class="col-12 button-styles" >
                             <a href="https://github.com/Sam89001" target="_blank">
                                 <div class="row">
 
                                     <div class="d-flex col-3" >
-                                        <div style="padding: 5px;">
-                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        <div style="padding: 10px;">
+                                            <img src="/Assets/images/SVGs/github-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -599,7 +605,7 @@
 
                                     <div class="d-flex col-3" >
                                         <div style="padding: 5px;">
-                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/arrow-sm-right-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -612,8 +618,8 @@
                                 <div class="row">
 
                                     <div class="d-flex col-3">
-                                        <div style="padding: 5px;">
-                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        <div style="padding: 10px;">
+                                            <img src="/Assets/images/SVGs/linkedin-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -625,7 +631,7 @@
 
                                     <div class="d-flex col-3">
                                         <div style="padding: 5px;">
-                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/arrow-sm-right-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -638,8 +644,8 @@
                                 <div class="row">
 
                                     <div class="d-flex col-3">
-                                        <div style="padding: 5px;">
-                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                        <div style="padding: 10px;">
+                                            <img src="/Assets/images/SVGs/pdf-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
@@ -651,17 +657,12 @@
 
                                     <div class="d-flex col-3" >
                                         <div style="padding: 5px;">
-                                            <img src="/Assets/images/SVGs/github.svg" class="img-fluid" alt="Responsive Image" />
+                                            <img src="/Assets/images/SVGs/arrow-sm-down-grey.svg" class="img-fluid" alt="Responsive Image" />
                                         </div>
                                     </div>
 
                             
                                 </div>
-                        </div>
-
-                        <div class="col-12 button-styles">
-
-                            <!-- code wars score here using codewars API-->
                         </div>
 
                     </div>
