--- a/PortfolioProjectMVC/wwwroot/css/site.css
+++ b/PortfolioProjectMVC/wwwroot/css/site.css
@@ -4,6 +4,10 @@ html {
     min-height: 100%;
 }
 
+a {
+    text-decoration: none;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -296,7 +300,6 @@ body {
     }
 }
 
-
 @media(max-width: 850px) {
 
     .name-title {
@@ -416,8 +419,6 @@ body {
 
 
 }
-
-
 
 @media(max-width: 585px) {
 
@@ -894,7 +895,6 @@ body {
 /* About Me Section*/
 
 .button-section {
-    background-color: red;
     min-height: 300px;
     max-width: 500px;
     margin-left: auto;
@@ -908,11 +908,7 @@ body {
 }
 
 .button-styles:hover {
-    background-color: var(--grey);
-}
-
-.button-styles:hover .about-me-text{
-    color: white;
+    background-color: lightgray;
 }
 
 .about-me-text {
